syntax = "proto3";
package dymensionxyz.dymension.incentives;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/dymensionxyz/dymension/v3/x/incentives/types";
// Params holds parameters for the incentives module
message Params {
  // distr_epoch_identifier is what epoch type distribution will be triggered by
  // (day, week, etc.)
  string distr_epoch_identifier = 1
      [ (gogoproto.moretags) = "yaml:\"distr_epoch_identifier\"" ];
  // CreateGaugeBaseFee is a base fee required to create a new gauge. The final
  // fee is calculated as
  // Fee = CreateGaugeBaseFee + AddDenomFee * (len(Denoms) + len(GaugeDenoms)).
  string create_gauge_base_fee = 2 [
    (gogoproto.nullable) = false,
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int"
  ];
  // AddToGaugeBaseFee is a base fee required to add to gauge. The final
  // fee is calculated as
  // Fee = AddToGaugeBaseFee + AddDenomFee * len(Denoms).
  string add_to_gauge_base_fee = 3 [
    (gogoproto.nullable) = false,
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int"
  ];
  // AddDenomFee is a fee charged for adding every new denom to the gauge.
  string add_denom_fee = 4 [
    (gogoproto.nullable) = false,
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int"
  ];

  enum EndorsementMode {
    ActiveOnly = 0;
    AllRollapps = 1;
  }
  
  // EndorsementMode switches between endorsing only active rollapps or all rollapps
  EndorsementMode endorsement_mode = 5;
}
