syntax = "proto3";
package dymensionxyz.dymension.rollapp;

option go_package = "github.com/dymensionxyz/dymension/v3/x/rollapp/types";

import "dymensionxyz/dymension/rollapp/app.proto";

message EventAppAdded {
  App app = 1;
}

message EventAppUpdated {
  App app = 1;
}

message EventAppRemoved {
  App app = 1;
}

message EventMarkObsoleteRollapps {
  // ObsoleteRollappNum is a number of rollapps that were marked as obsolete.
  uint64 obsolete_rollapp_num = 1;
  // DrsVersions is a list of DRS versions that were marked as obsolete.
  repeated uint32 drs_versions = 2;
}
